version/0.12/_sources/api/solver/_autosummary/settings/zone_name.rst.txt
:orphan:

.. _zone_name:

zone_name
=========

.. currentmodule:: ansys.fluent.core.solver.settings_231.zone_name

.. autoclass:: zone_name
    :show-inheritance:
    :undoc-members:
.. rubric:: Included in:

========================================================   =================================================================================================

Parent                                                                                                                                               Summary

========================================================   =================================================================================================
:ref:`copy_mrf_to_mesh_motion <copy_mrf_to_mesh_motion>`       Copy motion variable values for origin, axis and velocities from Frame Motion to Mesh Motion.

:ref:`copy_mesh_to_mrf_motion <copy_mesh_to_mrf_motion>`       Copy motion variable values for origin, axis and velocities from Mesh Motion to Frame Motion.

========================================================   =================================================================================================

