version/0.18/_sources/api/solver/_autosummary/settings/zone_name.rst.txt
:orphan:

.. _zone_name:

zone_name
=========

.. autoclass:: ansys.fluent.core.solver.settings_232.zone_name.zone_name
    :show-inheritance:

.. rubric:: Included in:

================================================================================================   =================================================================================================

Parent                                                                                                                                                                                       Summary

================================================================================================   =================================================================================================
:ref:`use_inlet_temperature_for_operating_density <use_inlet_temperature_for_operating_density>`                                              Use Inlet Temperature to calculate Opearating Density.

:ref:`copy_mrf_to_mesh_motion <copy_mrf_to_mesh_motion>`                                               Copy motion variable values for origin, axis and velocities from Frame Motion to Mesh Motion.

:ref:`copy_mesh_to_mrf_motion <copy_mesh_to_mrf_motion>`                                               Copy motion variable values for origin, axis and velocities from Mesh Motion to Frame Motion.

================================================================================================   =================================================================================================

